--- a/hartchart.html
+++ b/hartchart.html
@@ -112,7 +112,7 @@
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
 
-    <div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
+    <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
 
     <div>
