--- a/lettertracking.html
+++ b/lettertracking.html
@@ -11,15 +11,24 @@
   <script src="settings.js"></script>
 
   <style>
-    #output {
+    #output,#alphabits {
       font-size: 20pt;
       margin: 0.5em 2em 1.5em;
       line-height: 1.5em;
       letter-spacing: 0.1ex;
       cursor: default;
       user-select: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: bold;
     }
 
+
+    #alphabits {
+      margin: 1em;
+      text-align: center;
+      line-height: 1.5em;
+      letter-spacing: 0.25em;
+    }
 
 
     #showsolution:checked~#output,
@@ -44,7 +53,8 @@
     }
 
     #output.red {
-      background: red;
+      background: var(--trackredbg);
+      color: var(--trackred);
     }
 
 
@@ -104,6 +114,11 @@
     }
 
     @media print {
+      :root {
+        --trackred: #f00;
+        --trackredbg: transparent;
+      }
+
       #output {
         margin: 1em 4em 1em 3.5em;
       }
@@ -146,15 +161,17 @@
 
   <div id="controls">
     <div id="settings">*SETTINGS*</div>
-
-    Wordbank:
-    <textarea id="wordbank">th to ts te ti tu tc ta ty tl tt tr tw tg he hi ha ho ht hu hr hy er em ea el en ed ee et ev ef ei eh ex ew es eq eg ey ec ep ek eo ez eb re ry rk ra rw rd rr ri rt ro rn rg rm rs rv ru rc rh rl rp wa wh wo wi wn wr we wd as ar ab at al ay af av ac ai an ad ak am ag ap au ax no ng nk nd na ne ni nt nc ns nn ny nv nl nu nf ot or ou of oh ov oc on oo ok oa os op ow ol om og od oe ob ox in id ic it is im ie io iv ix ia ig ir if ip iq il ib so sa se sh st ss si su sl sp sc sm sk sq ve vo vi ma mu me mi mo my mp mb ms ka ke ks ki bl bb bi be bu bo by bj ba br le li lf ll la ly lo ld lm ls lu lt lk lw lv di de ds do dg da dy dd dm dr dv dl du df ce ch cc cu ct co ck cr cl ca ci cq uc ut ug ur ui ua un us ue ud um up ul ub gh ge gu gi ga gr go gn ft fe fo fl fi ff fa fu fr qu po pu pr pa pe pi pl ps pp ph pt ju je ys yi yl ye yt yw xc xe xy zo ze </textarea>
-    <button id="go">go</button>
-    <br />
-    Copy and paste any text here to use the letter combinations from that text.
+    <div class="ctrlbox">
+      Wordbank:
+      <textarea id="wordbank">th to ts te ti tu tc ta ty tl tt tr tw tg he hi ha ho ht hu hr hy er em ea el en ed ee et ev ef ei eh ex ew es eq eg ey ec ep ek eo ez eb re ry rk ra rw rd rr ri rt ro rn rg rm rs rv ru rc rh rl rp wa wh wo wi wn wr we wd as ar ab at al ay af av ac ai an ad ak am ag ap au ax no ng nk nd na ne ni nt nc ns nn ny nv nl nu nf ot or ou of oh ov oc on oo ok oa os op ow ol om og od oe ob ox in id ic it is im ie io iv ix ia ig ir if ip iq il ib so sa se sh st ss si su sl sp sc sm sk sq ve vo vi ma mu me mi mo my mp mb ms ka ke ks ki bl bb bi be bu bo by bj ba br le li lf ll la ly lo ld lm ls lu lt lk lw lv di de ds do dg da dy dd dm dr dv dl du df ce ch cc cu ct co ck cr cl ca ci cq uc ut ug ur ui ua un us ue ud um up ul ub gh ge gu gi ga gr go gn ft fe fo fl fi ff fa fu fr qu po pu pr pa pe pi pl ps pp ph pt ju je ys yi yl ye yt yw xc xe xy zo ze </textarea>
+      <button id="go">go</button>
+      <br />
+      Copy and paste any text here to use the letter combinations from that text.
+    </div>
   </div>
 
-  <br /><br /><br />
+  <div id="alphabits"></div>
+
   <input type="checkbox" data-state="0" class="threestate" id="stopwatch" /><label class="button" id="timer" for="stopwatch">start</label>
 
   <div id="output"></div>
@@ -170,8 +187,11 @@
 
     let output = document.querySelector("#output");
 
+    
+    document.querySelector("#alphabits").innerHTML = alphabet.toUpperCase() + "<br/>" + alphabet.toLowerCase();
 
-    document.querySelector("#red").onclick  = document.querySelector("#leveltwo").onclick = document.querySelector("#showsolution").onclick = function () {
+
+    document.querySelector("#red").onclick = document.querySelector("#leveltwo").onclick = document.querySelector("#showsolution").onclick = function () {
       accents(this.checked, this.id);
     };
 
@@ -398,9 +418,9 @@
 
 
 
-      output.innerHTML = finalstring + "<span class='wordcount'>" + string.split(" ").length + `,${wordcount}</span>`;
+      output.innerHTML = finalstring + "<span class='wordcount'>(" + string.split(" ").length + ")</span>";
 
-      output.onclick = function (e) {
+      output.onmousedown = function (e) {
         // console.log(e.target);
         if (!e.target.classList.contains("letter")) return;
         if (e.target.classList.contains("selected")) {
