--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -17,7 +17,7 @@
     <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
 
     <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
-    
+
 
     <div><input type="checkbox" class="slider" id="colormode" /><label class="button" for="colormode">Colorful markers</label></div>
 
@@ -28,15 +28,15 @@
 
   <div id="controls">
     <div id="settings">*SETTINGS*</div>
+    <div class="ctrlbox">
+      <div>Markers <input type="text" id="markers" /></div>
 
-    <div>Markers <input type="text" id="markers" /></div>
+      <div>Scale <input id="fontslider" type="range" min="0.5" max="2" value="1" step="0.1" /> <span id="fontscale"></span></div>
 
-    <div>Scale <input id="fontslider" type="range" min="0.5" max="2" value="1" step="0.1" /> <span id="fontscale"></span></div>
+      <div>Marker spacing <input id="markslider" type="range" min="0.5" max="2" value="1" step="0.05" /> <span id="markscale"></span></div>
 
-    <div>Marker spacing <input id="markslider" type="range" min="0.5" max="2" value="1" step="0.05" /> <span id="markscale"></span></div>
-
-    <div>Circle spacing <input id="spaceslider" type="range" min="0.5" max="2" value="1" step="0.05" /> <span id="spacescale"></span></div>
-
+      <div>Circle spacing <input id="spaceslider" type="range" min="0.5" max="2" value="1" step="0.05" /> <span id="spacescale"></span></div>
+    </div>
   </div>
 
 
