--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <div id="ctrlbar">
     <div id="homelogo"><img src="logo.svg" /></div>
-    <div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
+    <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
   </div>
 
