--- a/index.html
+++ b/index.html
@@ -89,8 +89,11 @@
 
 <h3><a href="tranaglyphs.html">Tranaglyphs</a></h3>
 <ul>
-  <li></li>
-  <li></li>
+<li>Requires the use of red/green glasses. Red lens over right eye.</li>
+<li>(Glyph images created using pure CSS.)</li>
+<li>Arrow keys can be used for fine adjust the separation of the images.</li>
+<li>Page up/Page down keys for coarse adjustments.</li>
+<li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
 </ul>
 </body>
 
