--- a/index.html
+++ b/index.html
@@ -87,14 +87,13 @@
     </li>
   </ul>
 
-<h3><a href="tranaglyphs.html">Tranaglyphs</a></h3>
-<ul>
-<li>Requires the use of red/green glasses. Red lens over right eye.</li>
-<li>(Glyph images created using pure CSS.)</li>
-<li>Arrow keys can be used for fine adjustment of glyph separation.</li>
-<li>Page up/Page down keys for coarse adjustments.</li>
-<li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
-</ul>
+  <h3><a href="tranaglyphs.html">Tranaglyphs</a></h3>
+  <ul>
+    <li>Requires the use of red/green glasses. Red lens over right eye.</li>
+    <li>(Glyph images created using pure CSS.)</li>
+    <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
+    <li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
+  </ul>
 </body>
 
 </html>
