--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -11,8 +11,13 @@
   <script src="settings.js"></script>
 
   <style>
-    input[type=range] {
+    :root {
+      --scale: 1;
       --steps: 0.05;
+      --glyphsize: calc(10cm * var(--scale));
+    }
+
+    input[type=range] {
       width: 80%;
       margin: 0.5em 0 0 10%;
     }
@@ -21,19 +26,19 @@
     #circles {
       position: relative;
       top: 3em;
-      --size: 10.5cm;
       --delta: 0;
-      --units: calc(1cm * var(--size) / var(--size));
+      --units: 1cm;
     }
 
     .circle,
     .center,
     .marker,
     .points {
-      width: var(--size);
-      height: var(--size);
-      border-radius: var(--size);
-      --bsize: calc(var(--size) * 0.06);
+      /* box-sizing: border-box; */
+      width: var(--glyphsize);
+      height: var(--glyphsize);
+      border-radius: var(--glyphsize);
+      --bsize: calc(var(--glyphsize) * 0.06);
       border: solid var(--bsize);
       position: absolute;
       left: 50%;
@@ -42,8 +47,8 @@
 
     #red,
     #green {
-      left: calc(50% + var(--delta) * var(--units));
-      transform: translate(calc(-50% + var(--delta) * var(--units)));
+      left: calc(50% + var(--delta) * var(--scale) * var(--units));
+      transform: translate(calc(-50% + var(--delta) * var(--scale) * var(--units)));
     }
 
     #red,
@@ -62,8 +67,8 @@
 
 
     .inner {
-      width: calc(var(--size) * .75);
-      height: calc(var(--size) * .75);
+      width: calc(var(--glyphsize) * .75);
+      height: calc(var(--glyphsize) * .75);
       top: 50%;
       transform: translate(-47%, -50%);
     }
@@ -75,10 +80,12 @@
 
 
     .satellite {
-      width: calc(var(--size) * .065);
-      height: calc(var(--size) * .065);
+      width: calc(var(--glyphsize) * .065);
+      height: calc(var(--glyphsize) * .065);
       bottom: -10%;
     }
+
+
 
     #green .satellite {
       top: -10%;
@@ -93,8 +100,8 @@
     }
 
     .center {
-      width: calc(var(--size) * .22);
-      height: calc(var(--size) * .22);
+      width: calc(var(--glyphsize) * .22);
+      height: calc(var(--glyphsize) * .22);
       border-width: 0;
       top: 50%;
       transform: translate(-50%, -50%);
@@ -104,7 +111,7 @@
     .center::before {
       content: " ";
       width: 100%;
-      height: 0.35cm;
+      height: calc(var(--glyphsize) * .035);
       position: absolute;
       background: var(--tranacolor);
       top: 50%;
@@ -122,8 +129,8 @@
 
 
     .marker {
-      width: calc(var(--size) * .03);
-      height: calc(var(--size) * .03);
+      width: calc(var(--glyphsize) * .03);
+      height: calc(var(--glyphsize) * .03);
       bottom: 22%;
     }
 
@@ -144,7 +151,7 @@
       position: absolute;
       height: 0;
       width: 0;
-      --point: calc(var(--size) * 0.05);
+      --point: calc(var(--glyphsize) * 0.05);
       border-top: none;
       border-left: solid calc(var(--point) /3) transparent;
       border-right: solid calc(var(--point) /3) transparent;
@@ -170,6 +177,18 @@
       margin: 0.5em;
       padding: 1em;
     }
+
+    #calibrate {
+      position: relative;
+      width: var(--glyphsize);
+      height: 1.5em;
+      line-height: 1.5em;
+      border-left: 2px solid var(--fg);
+      border-right: 2px solid var(--fg);
+      left: 50%;
+      transform: translate(-50%);
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -178,11 +197,14 @@
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="home.svg" alt="home" /></a></div>
     <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
-
   </div>
+
+  <input type="range" id="calibrator" min="0.5" max="3" step="0.05" value="1" />
+  <div id="calibrate"></div>
 
   <input type="range" id="slider" min="-24" max="24" />
   <div id="rangeout">0</div>
+
   <div id="circles">
     <div id="red" class="circle">
       <div class="inner circle"></div>
@@ -203,12 +225,17 @@
   </div>
   <script>
 
+    // document.querySelector("#calibrate");
+
 
     document.documentElement.setAttribute("data-theme", "light");
     // TODO - adjust settingsjs so checkbox does not  get checked
 
     let slider = document.querySelector("#slider");
-    let basestep = parseFloat(getComputedStyle(slider).getPropertyValue("--steps"));
+    let docvars = getComputedStyle(document.documentElement);
+
+    let basestep = parseFloat(docvars.getPropertyValue("--steps"));
+
     let fixpoint = basestep.toString().replace(/^\d*\.?/, "").length;
 
     slider.setAttribute("step", basestep);
@@ -216,6 +243,17 @@
     slider.oninput = function (e) {
       movecircles();
     };
+
+    let calibrator = document.querySelector("#calibrator");
+
+
+    calibrator.oninput = function (e) {
+      // parseFloat(docvars.getPropertyValue("--scale"));
+      document.documentElement.style.setProperty("--scale", this.value);
+      document.querySelector("#calibrate").innerText = this.value;
+    };
+
+
 
 
 
@@ -260,7 +298,7 @@
       console.log(e.key, e.keyCode, slider.value);
 
     });    
-    </script>
+  </script>
 
 </body>
 
