--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -12,9 +12,9 @@
 
   <style>
     :root {
-      --scale: 1;
+      --scale: 1.65;
       --steps: 0.05;
-      --glyphsize: calc(10cm * var(--scale));
+      --glyphsize: calc(4in * var(--scale));
     }
 
     input[type=range] {
@@ -199,7 +199,7 @@
     <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
   </div>
 
-  <input type="range" id="calibrator" min="0.5" max="3" step="0.05" value="1" />
+  <input type="range" id="calibrator" min="0.5" max="3" step="0.05" value="1.65" />
   <div id="calibrate"></div>
 
   <input type="range" id="slider" min="-24" max="24" />
