--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
     <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
     <li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
   </ul>
+
+<h3><a href="lines.html">Line counting</a></h3>
+<ul>
+  <li>Line counting exercise</li>
+</ul>
 </body>
 
 </html>
