--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Red green</title>
+  <title>Tranaglyphs</title>
   <meta name="darkreader-lock" />
 
   <link rel="stylesheet" href="vision.css" />
