--- a/lines.html
+++ b/lines.html
@@ -58,7 +58,8 @@
     <div id="barcode"></div>
     <br />
     <input type="text" id="answer">
-
+<br/><br/>
+Count the lines and enter your answer.
   </div>
   <script>
     let linecount;
