--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
 <h3><a href="lines.html">Line counting</a></h3>
 <ul>
-  <li>Line counting exercise</li>
+  <li>Line counting exercise.</li>
+  <li>Count the number of black bars and enter it in the box.</li>
 </ul>
 </body>
 
