--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <li>(Glyph images created using pure CSS.)</li>
     <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
     <li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
+    <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
   </ul>
 
 <h3><a href="lines.html">Line counting</a></h3>
