--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </li>
   </ul>
 
-  <h3><a href="tranaglyphs.html">Tranaglyphs</a></h3>
+  <h3><a href="tranaglyphs.html">Tranaglyphs/Fusion cards</a></h3>
   <ul>
     <li>Requires the use of red/green glasses. Red lens over right eye.</li>
     <li>(Glyph images created using pure CSS.)</li>
