--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
   <div class="plain">Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked.</div>
 
   <div class="plain">Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</div>
+  <ul>
+    <li>Space Fixator mode (Look, Ready, Touch, Back)
+      <ul>
+        <li>Three-state toggle slider!
+          <ul>
+            <li>Normal CP saccade display</li>
+            <li>Space Fixator with blank dots</li>
+            <li>Space Fixator with numeric labels</li>
+          </ul>
+        </li>
+    </li>
+
+  </ul>
 
 
   <h3><a href="hartchart.html">Hart Chart</a></h3>
@@ -94,14 +107,14 @@
     <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
     <li>Defaults to light mode. Dark mode glyph colors do not get filtered completely.</li>
     <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
-    <li>Select Fusion Mode to simulate Fusion cards exercise. Glyphs will appear in grayscale, separate to a fixed distance apart.</li>
+    <li>Select <b>Fusion Mode</b> to simulate Fusion cards exercise. Glyphs will appear in grayscale, separate to a fixed distance apart.</li>
   </ul>
 
-<h3><a href="lines.html">Line counting</a></h3>
-<ul>
-  <li>Line counting exercise.</li>
-  <li>Count the number of black bars and enter it in the box.</li>
-</ul>
+  <h3><a href="lines.html">Line counting</a></h3>
+  <ul>
+    <li>Line counting exercise.</li>
+    <li>Count the number of black bars and enter it in the box.</li>
+  </ul>
 </body>
 
 </html>
