--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
   </div>
 
-  <h3><a href="cpsaccades.html">CP Saccades exercise</a></h3>
+  <h3><a href="cpsaccades.html">CP Saccades / Space Fixator</a></h3>
   <div class="plain">Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked.</div>
 
   <div class="plain">Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</div>
@@ -100,7 +100,7 @@
     </li>
   </ul>
 
-  <h3><a href="tranaglyphs.html">Tranaglyphs/Fusion cards</a></h3>
+  <h3><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
   <ul>
     <li>Requires the use of red/green glasses. Red lens over right eye.</li>
     <li>(Glyph images created using pure CSS.)</li>
