--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -47,6 +47,10 @@
         transform: translate(calc(-50% + var(--scale) * 1.2 * var(--units)));
       }
 
+      .marker {
+        border-width: calc(var(--bsize)/1.5);
+      }
+
     }
 
 
