--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -222,6 +222,11 @@ display: none;
       content: attr(data-value) "x ⮕ 4in (10.16cm)";
       text-align: center;
     }
+
+#ctrlbar:has(#fusion:checked) ~ #slider {
+display: none;
+}
+
   </style>
 </head>
 
