Update tranaglyphs.html blend mode exclusion

--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -71,6 +71,7 @@ display: none;
       position: absolute;
       left: 50%;
       transform: translate(-50%);
+mix-blend-mode: exclusion;
     }
 
     #red,
