--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -8,7 +8,43 @@
   <meta name="darkreader-lock">
   <link rel="stylesheet" href="vision.css" />
   <script defer src="settings.js"></script>
+<style>
 
+#ctrlbar:has([value="redgreen"]:checked) ~ #main {
+
+.red {
+color: var(--tranared);
+}
+
+.green {
+color: var(--tranagreen);
+}
+
+}
+
+#ctrlbar:has([value="hybrid"]:checked) ~ #main {
+
+.red {
+background: linear-gradient(90deg, var(--tranagreen) 49%, var(--tranared) 50%);
+color: transparent;
+background-clip:text;
+}
+
+.green {
+background: linear-gradient(90deg, var(--tranared) 49%, var(--tranagreen) 50%);
+color: transparent;
+background-clip:text;
+}
+
+}
+
+#ctrlbar:has([value="colorful"]:checked) ~ #main .dot {
+color: var(--colorfg);
+}
+
+
+
+</style>
 </head>
 
 <body>
@@ -21,7 +57,19 @@
     <div><input type="checkbox" class="threestate" id="spacefix" /><label class="button" for="spacefix">Space Fixator</label></div>
 
 
-    <div><input type="checkbox" class="slider" id="colormode" /><label class="button" for="colormode">Colorful markers</label></div>
+<div>
+Color mode:
+<select id="colormode">
+<option value="default">Default</option>
+<option value="colorful">Colorful</option>
+<option value="redgreen">Red/green</option>
+<option value="hybrid">Red+green</option>
+</select>
+</div>
+
+    <!-- div><input type="checkbox" class="slider" id="colormode_x" /><label class="button" for="colormode_x">Colorful markers</label></div>
+
+    <div><input type="checkbox" class="slider" id="redgreen" /><label class="button" for="redgreen">Red/Green mode</label></div-->
 
     <button id="reload">Reload</button>
 
@@ -67,15 +115,20 @@
 
     let box = document.querySelector("#main");
 
-    let origmarkers = "ABCDEFGHIJKLMOPQR".split("");
+    let origmarkers = "ABCDEFGHIJKLMNOPQ".split("");
 
     let spacefix = document.querySelector("#spacefix");
+
+	let colormode =  document.querySelector("#colormode");
+
+let redgreen = 0;
 
     document.querySelector("#markers").value = origmarkers.join("");
 
 
     spacefix.onclick = function(e) {
       threestate(this);
+			colormode.value="default";
       if (spacefix.dataset.state ==1) {
         box.classList.add("midspace");
       } else {
@@ -100,12 +153,12 @@
       showchart();
     };
 
-
+/*
     let colormode = false;
     document.querySelector("#colormode").onchange = function (e) {
       colormode = this.checked;
       showchart();
-    };
+    };*/
 
 
 
@@ -137,6 +190,7 @@
 
     function showchart() {
 
+redgreen =0;
 
       let fontsize = getComputedStyle(document.body).getPropertyValue('--fontsize');
       let marksize = fontsize * 3 * markscale;
@@ -145,7 +199,7 @@
 
       let markers = ashuffle(spacefix.dataset.state>0 ? "1,2,3,4,5,6,7,8,9,10,11,12".split(",") : origmarkers);
 
-
+			let origmarkers_copy = [...origmarkers];
 
       let dot = document.createElement("div");
       dot.className = "dot";
@@ -222,7 +276,11 @@
         thing.style.top = `calc(${point[1]}% - 0.5em)`;
         if (!center) {
           thing.onclick = function (e) {
-            if (this.innerText == centerpoint.dataset.mark) {
+// TODO colormode hybrid / redgreen
+if ((colormode.value == "redgreen"|| colormode.value =="hybrid") && this.innerText == origmarkers_copy[0]) {
+origmarkers_copy.shift();
+this.remove();
+} else if (this.innerText == centerpoint.dataset.mark) {
               console.log("YAY");
               spark("50%", "50%", { anchor: box }).then(() => {
 
@@ -235,7 +293,10 @@
               spark("50%", "50%", { anchor: box, color: "red" });
             }
           };
-          if (colormode) thing.style.color = colors[Math.floor(Math.random() * colors.length)];
+          //if (colormode) thing.style.color = colors[Math.floor(Math.random() * colors.length)];
+thing.style.setProperty("--colorfg", colors[Math.floor(Math.random() * colors.length)]);
+
+			thing.classList.add(redgreen++ % 2 ? "red": "green");
         }
       }
 
