--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -35,13 +35,13 @@
       top: 3em;
       --delta: 0;
       --units: 1cm;
-mix-blend-mode: difference;
+*{ mix-blend-mode: difference;}
     }
 
 
     #circles.fusion {
      /* filter: brightness(0) saturate(0);*/
-mix-blend-mode: normal; 
+*{mix-blend-mode: normal; }
 
 --tranared: var(--fg);
 --tranagreen: var(--fg);
