--- a/hartchart.html
+++ b/hartchart.html
@@ -174,8 +174,8 @@
       let txferstring = "";
       main.innerHTML = "";
       let lastchar = "";
-      for (let x = 0; x < 10; x++) {
-        for (let y = 0; y < 10; y++) {
+      for (let x = 1; x <= 10; x++) {
+        for (let y = 1; y <= 10; y++) {
           let slot = document.createElement("div");
           slot.className = "slot";
 
