--- a/hartchart.html
+++ b/hartchart.html
@@ -220,6 +220,7 @@ codeout.innerHTML += "[" + coords.id.replace(/^slot/,"") + "] &nbsp; ";
 
 } else {
 console.log("NOTFOUND", c);
+codeout.innerHTML += "[" + c + "] &nbsp; ";
 }
 // find it in the grid
 
