--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -325,7 +325,7 @@ window.addEventListener("keydown", function (e) {
 
 
 
-    document.documentElement.setAttribute("data-theme", "light");
+    // document.documentElement.setAttribute("data-theme", "light");
     // TODO - adjust settingsjs so checkbox does not  get checked
 
 
