--- a/hartchart.html
+++ b/hartchart.html
@@ -97,10 +97,6 @@
       font-size: 150%;
       right: -1.5em;
     }
-
-
-
-
   </style>
   <!-- https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/ -->
   <!-- https://dev.to/murtuzaalisurti/how-to-make-a-qr-code-generator-using-vanilla-javascript-3cla -->
@@ -141,25 +137,15 @@
   <div id="boxscale"><input type="range" id="scale" max="1" min="0.3" value="1" step="0.01" /></div>
 
   <div id="main" data-mark=""></div>
-<div id="codeout"></div>
+  <div id="codeout"></div>
   <script>
 
 
     let main = document.querySelector("#main");
-
-
-    document.querySelector("input#scale").oninput = function (e) {
-      console.log(this.value);
-
-      document.body.style.setProperty('--scale', this.value);
-    };
-
-
-    // const params = new URLSearchParams(window.location.search);
-
-    // let querypattern = params.get("q");
-    // console.log(params);
+    let codeout = document.querySelector("#codeout");
+    let qrplace = document.querySelector("#qrplace");
     let querypattern = window.location.hash.replace(/^#/, "");
+
     querypattern = querypattern.toUpperCase().replace(/[^A-Z]/g, "");
     if (querypattern) {
       // querypattern = 
@@ -168,6 +154,10 @@
       showchart();
     }
 
+    document.querySelector("input#scale").oninput = function (e) {
+      // console.log(this.value);
+      document.body.style.setProperty('--scale', this.value);
+    };
 
 
     function showchart(pattern) {
@@ -179,10 +169,9 @@
           let slot = document.createElement("div");
           slot.className = "slot";
 
-					slot.id= "slot" + x + "-" + y;
+          slot.id = "slot" + x + "-" + y;
           let breakcount;
-          // while (nextchar == lastchar) {
-         slot.dataset.c= slot.innerText = lastchar = pattern ? pattern.shift() : nextletter(lastchar);
+          slot.dataset.c = slot.innerText = lastchar = pattern ? pattern.shift() : nextletter(lastchar);
           txferstring += lastchar;
           main.append(slot);
         }
@@ -197,41 +186,37 @@
       getqr(qrstring);
       // }
 
-hartcode();
+      hartcode();
     }
 
 
 
-function hartcode(text="this is a secret message") {
+    function hartcode(text = "this is a secret message") {
 
-let codeout = document.querySelector("#codeout");
-codeout.innerText = "";
-//codeout.style.gridArea = "11 / 1 / 11 / 10";
+      codeout.innerText = "";
 
-for (const c of text.toUpperCase().split(/ ?/)) {
+      for (const c of text.toUpperCase().split(/ ?/)) {
 
-let found = main.querySelectorAll(`div[data-c="${c}"]`);
+        let found = main.querySelectorAll(`div[data-c="${c}"]`);
 
-if (found.length>0) {
+        if (found.length > 0) {
 
-let coords = found[Math.floor(Math.random() * found.length)];
-console.log(c, coords.id);
-codeout.innerHTML += "[" + coords.id.replace(/^slot/,"") + "] &nbsp; ";
+          let coords = found[Math.floor(Math.random() * found.length)];
+          console.log(c, coords.id);
+          codeout.innerHTML += "[" + coords.id.replace(/^slot/, "") + "] &nbsp; ";
 
-} else {
-console.log("NOTFOUND", c);
-codeout.innerHTML += "[" + c + "] &nbsp; ";
-}
-// find it in the grid
+        } else {
+          console.log("NOTFOUND", c);
+          codeout.innerHTML += "[" + c + "] &nbsp; ";
+        }
 
-}
+      }
 
-}
+    }
 
 
     function getqr(data) {
       let [w, h] = [250, 250];
-      let qrplace = document.querySelector("#qrplace");
       let qrcode = document.createElement("a");
       qrcode.className = "qrcode";
       qrcode.href = data;
