--- a/index.html
+++ b/index.html
@@ -54,20 +54,28 @@
   </div>
 
   <h3><a href="cpsaccades.html">CP Saccades / Space Fixator / Red-Green delete</a></h3>
-  <div class="plain">Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked.</div>
-
-  <div class="plain">Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</div>
   <ul>
-    <li>Space Fixator mode (Look, Ready, Touch, Back)
+    <li>CP saccades:
       <ul>
-        <li>Three-state toggle slider!
-          <ul>
-            <li>Normal CP saccade display</li>
-            <li>Space Fixator with blank dots</li>
-            <li>Space Fixator with numeric labels</li>
-          </ul>
-        </li>
-</ul>
+        <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
+        <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
+        <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
+      </ul>
+    </li>
+    <li>Space Fixator (Look, Ready, Touch, Back):
+      <ul>
+        <li>Normal CP saccade display</li>
+        <li>Space Fixator with blank dots</li>
+        <li>Space Fixator with numeric labels</li>
+      </ul>
+    </li>
+    <li>Red/Green delete
+      <ul>
+        <li>Use Red/Green glasses</li>
+        <li>Select Red/Green in the Color Mode dropdown menu</li>
+        <li>Advanced Red+Green option for two-tone letter colors</li>
+      </ul>
+
     </li>
 
   </ul>
@@ -97,17 +105,27 @@
         <li>This can be customized by entering any text into the wordbank input box.</li>
         <li>If all letters are not present in the text, the script will show an error.</li>
       </ul>
-
     </li>
+    <li>"Level 2" option mixes capital and lowercase letters.</li>
+    <li>Use red/green glasses with "Red" mode.</li>
   </ul>
 
   <h3><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
   <ul>
-    <li>Requires the use of red/green glasses. Red lens over right eye.</li>
-    <li>(Glyph images created using pure CSS.)</li>
-    <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
-    <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
-    <li>Select <b>Fusion Mode</b> to simulate Fusion cards exercise. Glyphs will appear in grayscale, separate to a fixed distance apart.</li>
+    <li>Tranaglyphs:
+      <ul>
+        <li>Requires the use of red/green glasses. Red lens over right eye.</li>
+        <li>(Glyph images created using pure CSS.)</li>
+        <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
+        <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
+      </ul>
+    </li>
+    <li>Fusion Mode:
+      <ul>
+        <li>Simulate Fusion cards exercise. Glyphs will appear as black/white, separate to a fixed distance apart.</li>
+        <li>Use the calibrator to adjust the scale.</li>
+      </ul>
+    </li>
   </ul>
 
   <h3><a href="lines.html">Line counting</a></h3>
